# MiniMe-LLM

./: .env  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  main.py  pyproject.toml  requirements.txt
scripts/: infrastructure.py
